<resources>
    <string name="app_name">Belang</string>
    <string name="nav_home">Home</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_training">Training</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_search">Search</string>
    <string name="nav_about">About</string>
    <string name="nav_quiz">Quiz</string>

</resources>
