<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/home2"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_soal"
        android:icon="@drawable/icons_book"
        android:title="@string/nav_training" />
    <item
        android:id="@+id/nav_quiz"
        android:icon="@drawable/brain"
        android:title="@string/nav_quiz" />
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/icon_profile"
        android:title="@string/nav_profile" />
    <item
        android:id="@+id/nav_about"
        android:icon="@drawable/about"
        android:title="@string/nav_about" />
</menu>